<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy_space_background">

    <TextView
        android:id="@+id/textViewPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rizkybroline"
        android:text="@string/plattform_w_hlen"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPlatform"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/pc"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/nintendo_switch"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonPs5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/playstation_5"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonXbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/xbox_one"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/android"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtoniOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/ios"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupPlatform"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rizkybroline"
        android:text="@string/sortieren_nach"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSortBy"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/datum"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/wert"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rizkybroline"
            android:text="@string/beliebtheit"
            android:textColor="@android:color/white" />

    </RadioGroup>


</RelativeLayout>