<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy_space_background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/fgglogo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:hint="@string/email_adresse"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rizkybroline"
        android:padding="16dp"
        android:text="@string/anmelden"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rizkybroline"
        android:padding="16dp"
        android:text="@string/registrieren"
        android:textColor="@android:color/white" />

</RelativeLayout>